--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,8 @@
+@import "reset";
 @import "utils";
 @import "fonts";
 @import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "blocks/mini-blocks";
+@import "blocks/page";
+@import "blocks/nav";
+@import "blocks/menu";
