--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$gray-900: rgb(30, 33, 44);
+$gray-800: rgb(66, 69, 81);
+$gray-700: rgb(120, 122, 128);
+$gray-600: rgb(153, 155, 166);
+$gray-500: rgb(179, 183, 188);
+$gray-400: rgb(215, 218, 221);
+$gray-300: rgb(229, 232, 237);
+$gray-200: rgb(244, 245, 246);
+$gray-100: rgb(249, 249, 249);
+$white: rgb(255, 255, 255);
+$primary: rgb(255, 90, 48);
